--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.5",
+    "@types/uuid": "^9.0.7",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   }
 }
