--- a/my-turborepo/apps/native/package.json
+++ b/my-turborepo/apps/native/package.json
@@ -11,13 +11,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@repo/ui": "*",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.1",
-    "react-native-web": "^0.19.10",
-    "@repo/ui": "*"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
