--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
     "@types/uuid": "^9.0.7",
     "dotenv": "^16.3.2",
