--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4"
   }
 }
