--- a/auth0/package.json
+++ b/auth0/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -17,6 +19,7 @@
     "react-native": "0.73.2",
     "react-native-auth0": "^3.1.0",
     "react-native-device-info": "^10.12.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-paper": "^5.12.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
