--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^9.0.7",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
